# galay-ssl

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  galay-ssl-config.cmake.in
.claude/skills/C++代码规范/: SKILL.md
.claude/skills/代码实现和测试/: SKILL.md
.claude/skills/测试和压测/: SKILL.md
benchmark/: B1-SslBenchClient.cc  B1-SslBenchServer.cc  B1-ssl_bench_client.cc  B1-ssl_bench_server.cc  CMakeLists.txt  README.md  SslStats.cc  b1_client.cc  b1_server.cc  bench_ssl_client.cc  bench_ssl_server.cc  ssl_stats.cc  ssl_stats.h
benchmark/compare/rust/: Cargo.toml
benchmark/go-crypto-tls-server/: .gitignore  README.md  go.mod  main.go  main_test.go
benchmark/rust-tokio-rustls-server/: Cargo.toml  README.md
benchmark/rust-tokio-rustls-server/src/: main.rs
build-docverify/: CMakeCache.txt  Makefile  cmake_install.cmake
build-docverify/benchmark/: Makefile  cmake_install.cmake
build-docverify/certs/: README.md  ca.crt  ca.srl  client.crt  client.key  generate_certs.sh  server.crt
build-docverify/examples/: Makefile  cmake_install.cmake
build-docverify/galay-ssl/: Makefile  cmake_install.cmake  galay-ssl-config.cmake
build-docverify/lib/: libgalay-ssl.1.0.0.dylib  libgalay-ssl.1.dylib  libgalay-ssl.dylib
build-docverify/test/: Makefile  cmake_install.cmake
certs/: ca.crt  ca.key  ca.srl  server.crt  server.key
cmake/: option.cmake
docs/: 00-快速开始.md  01-快速开始.md  01-架构设计.md  02-API参考.md  02-使用示例.md  03-使用指南.md  03-模块介绍.md  04-示例代码.md  05-性能分析.md  05-性能测试.md  06-高级主题.md  07-常见问题.md  08-常见问题.md  09-高级主题.md  B1-SSL压测报告.md  README.md  T1-SSL测试结果.md  benchmark_report.md  release_note.md  test_results_summary.md
docs/plans/: 2026-03-07-galay-kernel-compat-perf-design.md  2026-03-07-galay-kernel-compat-perf-results.md  2026-03-07-galay-kernel-compat-perf.md  2026-03-17-galay-ssl-awaitable-v320-design.md  2026-03-17-galay-ssl-awaitable-v320.md  2026-03-18-galay-ssl-state-machine-cutover-design.md  2026-03-18-galay-ssl-state-machine-cutover.md  2026-03-18-rust-go-ssl-benchmark-design.md  2026-03-18-rust-go-ssl-benchmark-results.md  2026-03-18-rust-go-ssl-benchmark.md
examples/: CMakeLists.txt  E1-SslEchoServer.cc  E2-SslClient.cc
examples/import/: E1-ssl_echo_server.cc  E2-SslClient.cc  E2-ssl_client.cc  E3-ssl_custom_state_machine.cc  E4-ssl_builder_protocol.cc  e1_echo.cc  e2_echo.cc  e3_custom.cc  e4_builder.cc
examples/include/: E1-SslEchoServer.cc  E1-ssl_echo_server.cc  E2-SslClient.cc  E2-ssl_client.cc  E3-ssl_custom_state_machine.cc  E4-ssl_builder_protocol.cc  e1_echo.cc  e2_echo.cc  e3_custom.cc  e4_builder.cc
galay-ssl/: CMakeLists.txt
galay-ssl/async/: Awaitable.cc  Awaitable.h  SslAwaitableCore.cc  SslAwaitableCore.h  SslSocket.cc  SslSocket.h  awaitable.h  ssl_await.cc  ssl_await.h  ssl_socket.cc  ssl_socket.h
galay-ssl/common/: Error.cc  Error.h  defn.hpp  error.cc
galay-ssl/module/: ModulePrelude.hpp  galay.ssl.cppm  galay_ssl.cppm  module_prelude.hpp
galay-ssl/ssl/: SslContext.cc  SslContext.h  SslEngine.cc  SslEngine.h  ssl_context.cc  ssl_context.h  ssl_engine.cc  ssl_engine.h
scripts/: S1-Bench.sh  S2-Bench-Rust-Compare.sh  S2-CrossLangBench.remote.sh  S2-CrossLangBench.sh  bench.sh  check.sh  run.sh
test/: CMakeLists.txt  T1-ssl_socket_test.cc  T10-ssl_send_read_resume.cc  T11-ssl_default_context_steady_state.cc  T12-ssl_connect_accept_fanout.cc  T13-ssl_handshake_fanout.cc  T14-ssl_timeout_signal_switch_surface.cc  T2-SslLoopbackSmoke.cc  T3-ssl_single_shot_semantics.cc  T4-ssl_state_machine_surface.cc  T5-ssl_recv_send_state_machine.cc  T6-ssl_custom_state_machine.cc  T7-ssl_builder_surface.cc  T8-ssl_builder_protocol.cc  T9-ssl_sequence_base_error_bridge.cc  t10_resume.cc  t11_steady.cc  t12_fanout.cc  t13_handshake.cc  t14_timeout.cc  t1_socket.cc  t2_loopback.cc  t3_policy.cc  t4_state.cc  t5_io.cc  t6_custom.cc  t7_builder.cc  t8_proto.cc  t9_bridge.cc  test_ssl_socket.cc
todo/: 规范整改.md
